Fix header alignments

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -123,12 +123,10 @@ body.template-leftbar .box-1 {
 
 /* Page title */
 
-#content.distribution-enabled h1.page-title {
-  display: none;
-}
 #content h1.page-title {
   color: white;
   background: #1FA1D0;
+  border: none;
   display: block;
   font-variant: normal;
   font-size: 24px;
@@ -208,16 +206,16 @@ body.template-leftbar .box-1 {
 
 #user form {
   position: absolute;
-  right: 352px;
   top: 30px;
+  right: 430px;
   margin: 0;
 }
 
 #user form input,
 #theme-header form input {
   border: 1px solid #000;
-  padding: 4px 2px;
-  width: 364px;
+  padding: 4px 10px;
+  width: 270px;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
@@ -345,7 +343,7 @@ body.template-leftbar .box-1 {
 #theme-header {
   position: absolute;
   top: 0;
-  right: 260px;
+  right: 289px;
   width: 474px;
   z-index: 11;
 }
@@ -363,9 +361,9 @@ body.template-leftbar .box-1 {
 }
 
 #cat_menu li {
-  width: 151px;
-  border: 2px solid #000;
-  padding: 2px 0 2px 5px;
+  width: 147px;
+  border: 2px solid black;
+  padding: 2px 0 2px 9px;
   float: left;
   border-top: 0;
   border-left: 0;
@@ -477,19 +475,19 @@ body.template-leftbar .box-1 {
 #navigation {
   height: 60px;
   top: 70px;
-  left: 225px;
+  left: 275px;
+  width: 712px;
   background: transparent;
-  width:722px
+  border-top: 1px dotted #71b5d8;
+  padding-left: 10px;
 }
 
 #navigation ul {
-  padding: 0;
-  padding-top: 10px;
+  padding: 10px 0 0 0;
+  width: 100%;
   height: auto;
-  border-top: 1px dotted #71b5d8;
   float: left;
   display: block;
-  width: 100%;
 }
 
 #navigation span {
